--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,22 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.4.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.6.Final</version>
+			<scope>test</scope>
+		</dependency>
+
+		
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -80,6 +96,114 @@
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.19.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+					<execution>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<copy file="\${basedir}/datasource/restdb-ds.xml" tofile="\${basedir}/docker/wildfly/restdb-ds.xml" />
+								<copy
+									file="\${project.build.directory}/\${project.build.finalName}.war"
+									tofile="\${basedir}/docker/wildfly/\${project.artifactId}.war" />
+							</tasks>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.17.2</version>
+				<configuration>
+					<image>
+						<name>mysqldb</name>
+						<build>
+							<dockerFileDir>\${project.basedir}/docker/mysql</dockerFileDir>
+						</build>
+						<run>
+							<ports>
+								<port>3307:3306</port>
+							</ports>
+							<env>
+								<MYSQL_ROOT_PASSWORD>root</MYSQL_ROOT_PASSWORD>
+							</env>
+							<wait>
+								<time>50000</time>
+								<log>mysqld: ready for connections</log>
+							</wait>
+						</run>
+					</image>
+					<image>
+						<name>wildfly -test</name>
+						<build>
+							<dockerFileDir>${project.basedir}/docker/wildfly</dockerFileDir>
+						</build>
+						<run>
+							<ports>
+								<port>8080:8080</port>
+							</ports>
+							<dependsOn>mysqldb</dependsOn>
+							<links>
+								<link>mysqldb:database</link>
+							</links>
+							<cmd>
+								<shell>./wait-for-it.sh -t 0 database:3306 --
+									/opt/jboss/wildfly/bin/standalone.sh -b 0.0.0.0</shell>
+							</cmd>
+							<wait>
+								<time>50000</time>
+								<log>Deployed</log>
+							</wait>
+						</run>
+					</image>
+				</configuration>
+				<executions>
+					<execution>
+						<id>docker:build</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>docker:start</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>docker:stop</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
